added div and p tags

--- a/WebContent/box.html
+++ b/WebContent/box.html
@@ -22,6 +22,22 @@ li.withborder {
 	border-width: medium;
 	border-color: lime;
 }
+
+div {
+    background: #ffeeff;
+    border: 1px solid #0f0;
+    width: 400px;
+    height: 200px;
+}
+
+p {
+border: 3px dashed #888;
+width: 50%;
+margin: auto;
+text-align: center;
+padding-top: 20px;
+padding-bottom: 20px;
+}
 </style>
 
 </head>
@@ -31,6 +47,10 @@ li.withborder {
 <li>First element of list</li>
 <li class='withborder'>Second element of list is a bit longer to illustrate wrapping.</li>
 </ul>
-
+<input type="date" min="2011-01-01" max="2015-12-31" step="1" value="2011-11-16"/>
+<div>
+text
+<p>other text</p>
+</div>
 </body>
 </html>
