--- a/WebContent/box.html
+++ b/WebContent/box.html
@@ -8,8 +8,9 @@
 ul {
 	background: yellow;
 	margin: 12px 12px 12px 12px;
-	padding: 3px 3px 3px 3px; 
+	padding: 3px 3px 3px 3px;
 }
+
 li {
 	color: white;
 	background: blue;
@@ -17,6 +18,7 @@ li {
 	padding: 12px 0px 12px 12px;
 	list-style: none;
 }
+
 li.withborder {
 	border-style: dashed;
 	border-width: medium;
@@ -24,33 +26,86 @@ li.withborder {
 }
 
 div {
-    background: #ffeeff;
-    border: 1px solid #0f0;
-    width: 400px;
-    height: 200px;
+	background: #FEF;
+	border: 1px solid lime;
+	width: 80px;
+	height: 200px;
+	margin: 10px 30px;
+}
+
+div {
+	border-radius: 15px;
+}
+
+#container {
+	border: 2px dotted #00f;
+}
+
+div div {
+	background: #ffeeff;
+	border: 1px solid #0f0;
+	width: 400px;
+	height: 200px;
+	display: inline-block;
 }
 
 p {
-border: 3px dashed #888;
-width: 50%;
-margin: auto;
-text-align: center;
-padding-top: 20px;
-padding-bottom: 20px;
+	border: 3px dashed #888;
+	width: 50%;
+	margin: auto;
+	text-align: center;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 </style>
 
 </head>
 <body>
 
-<ul>
-<li>First element of list</li>
-<li class='withborder'>Second element of list is a bit longer to illustrate wrapping.</li>
-</ul>
-<input type="date" min="2011-01-01" max="2015-12-31" step="1" value="2011-11-16"/>
-<div>
-text
-<p>other text</p>
-</div>
+	<ul>
+		<li>First element of list</li>
+		<li class='withborder'>Second element of list is a bit longer to
+			illustrate wrapping.</li>
+	</ul>
+	<input type="date" min="2011-01-01" max="2015-12-31" step="1"
+		value="2011-11-16" />
+	<div id="container">
+		<div>
+			text
+			<p>other text</p>
+		</div>
+		<div>
+			text
+			<p>other text</p>
+		</div>
+		<div>
+			text
+			<p>other text</p>
+		</div>
+		<div>
+			text
+			<p>other text</p>
+		</div>
+		<div>
+			text
+			<p>other text</p>
+		</div>
+		<div>
+			text
+			<p>other text</p>
+		</div>
+		<div>
+			text
+			<p>other text</p>
+		</div>
+		<div>
+			text
+			<p>other text</p>
+		</div>
+		<div>
+			text
+			<p>other text</p>
+		</div>
+	</div>
 </body>
 </html>
